--- a/bus/bus.ipynb
+++ b/bus/bus.ipynb
@@ -32,32 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# variables\n",
-    "p_in = [5,9,2,4,3]\n",
-    "p_out = [0,3,5,2,5]\n",
-    "\n",
-    "stops = []\n",
-    "for i in range (0,len(p_in)):\n",
-    "    stop=(p_in[i], p_out[i])\n",
-    "    stops.append(stop)\n"
+    "stops = [(10, 0), (4, 1), (3, 5), (3, 4), (5, 1), (1, 5), (5, 8 ), (4, 6), (2, 3)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "9"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "14"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,15 +100,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.4\n",
-      "2.0591260281974\n"
+      "9.333333333333334\n",
+      "3.197221015541813\n"
      ]
     }
    ],
@@ -130,6 +124,13 @@
     "standard_deviation = (sum(squared_deviations)/len(squared_deviations))**0.5\n",
     "print(standard_deviation)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
