--- a/rock–paper–scissors/rock-paper-scissors.ipynb
+++ b/rock–paper–scissors/rock-paper-scissors.ipynb
@@ -25,18 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-b34afd637ba9>, line 88)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-b34afd637ba9>\"\u001b[0;36m, line \u001b[0;32m88\u001b[0m\n\u001b[0;31m    def winner()\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
     "# https://stackoverflow.com/questions/306400/how-to-randomly-select-an-item-from-a-list\n",
@@ -155,49 +146,96 @@
    "outputs": [],
    "source": [
     "# Import the choice function of the random module\n",
-    "\n",
+    "import random\n",
     "\n",
     "# Define a function that asks for an odd number on the keyboard, until it is not valid\n",
     "# will keep asking\n",
-    "\n",
+    "def odd_number():\n",
+    "    odd_number= int (input(\"Insert and odd number:\"))\n",
+    "    while odd_number % 2 != 0:\n",
+    "        odd_number=int (input (\"That is an even number, please insert an odd number:\"))\n",
+    "    return odd_number\n",
     "\n",
     "# Assign a list of 5 possible options.\n",
+    "\n",
+    "game = ['stone', 'paper', 'scissors', 'lizard', 'spock']\n",
     "\n",
     "\n",
     "# Assign a variable to the maximum number of games: 1, 3, 5, etc ...\n",
     "# This time the previously defined function is used\n",
-    "\n",
+    "maximum_games=5\n",
     "\n",
     "# Assign a variable to the number of games a player must win to win.\n",
     "# Preferably the value will be based on the number of maximum games\n",
-    "\n",
+    "games_win=int(maximum_games/2)+1\n",
     "\n",
     "# Define a function that randomly returns one of the 5 options.\n",
     "# This will correspond to the play of the machine. Totally random.\n",
-    "\n",
+    "def machine_play():\n",
+    "    return random.choice(game)\n",
     "\n",
     "# Define a function that asks your choice between 5\n",
     "# you should only allow one of the 5 options. This is defensive programming.\n",
     "# If it is not valid, keep asking until it is valid.\n",
-    "\n",
+    "def ask_choice():\n",
+    "    user_choice=input(\"What is your play?\")\n",
+    "    while (user_choice != game[0]) and (user_choice != game[1]) and (user_choice != game[2]) and (user_choice != game[3]) and (user_choice != game[4]):\n",
+    "        user_choice = input(\"The answer is not valid, choose one of the following: scissors, stone or paper:\")\n",
+    "        print (\"ok\")\n",
+    "    return user_choice\n",
     "\n",
     "# Define a function that resolves a combat.\n",
     "# Returns 0 if there is a tie, 1 if the machine wins, 2 if the human player wins\n",
     "# Now there are more options\n",
-    " \n",
-    "\n",
+    "def combat():\n",
+    "    global machine\n",
+    "    machine = machine_play()\n",
+    "    global user\n",
+    "    user = ask_choice()\n",
+    "    if ((user == game[0]) and ((machine == game[2]) or (machine == game[3]))) or (\n",
+    "            (user == game[1]) and ((machine == game[0]) or (machine == game[4]))) or (\n",
+    "            (user == game[2]) and ((machine == game[1]) or (machine == game[3]))) or (\n",
+    "            (user == game[3]) and ((machine == game[4]) or (machine == game[1]))) or (\n",
+    "            (user == game[4]) and ((machine == game[2]) or (machine == game[0]))):\n",
+    "        return (2)\n",
+    "    elif ((user == game[0]) and (machine == game[0])) or ((user == game[1]) and (machine == game[1])) or (\n",
+    "            (user == game[2]) and (machine == game[2])) or ((user == game[3]) and (machine == game[3])) or ((user == game[4]) and (machine == game[4])):\n",
+    "        return (0)\n",
+    "    else:\n",
+    "        return (1)\n",
     "    \n",
     "# Define a function that shows the choice of each player and the state of the game\n",
     "# This function should be used every time accumulated points are updated\n",
+    "user_pontuation=0\n",
+    "machine_pontuation=0\n",
     "\n",
+    "def game_play ():\n",
+    "    play_result=combat()\n",
+    "    if play_result==2:\n",
+    "        global user_pontuation\n",
+    "        user_pontuation +=1\n",
+    "    if play_result==1:\n",
+    "        global machine_pontuation\n",
+    "        machine_pontuation +=1\n",
+    "    print(\"User played\", user, \"and machine played\", machine, \". Total pontuation is\", user_pontuation, \" for user, and\", machine_pontuation, \"for machine\")\n",
     "    \n",
+    "\n",
     "# Create two variables that accumulate the wins of each participant\n",
     "\n",
     "# Create a loop that iterates while no player reaches the minimum of wins\n",
     "# necessary to win. Inside the loop solves the play of the\n",
     "# machine and ask the player's. Compare them and update the value of the variables\n",
     "# that accumulate the wins of each participant.\n",
-    "\n",
+    "def full_game():\n",
+    "    global machine_pontuation\n",
+    "    global user_pontuation\n",
+    "    while (machine_pontuation<games_win) and (user_pontuation<games_win):\n",
+    "        game_play()\n",
+    "    if machine_pontuation == games_win:\n",
+    "        print (\"Machine has won the game.\")\n",
+    "    elif user_pontuation == games_win:\n",
+    "        print (\"User has won the game.\")\n",
+    "    \n",
     "    \n",
     "    \n",
     "# Print by console the winner of the game based on who has more accumulated wins\n",
